cc_binary(
    name = "echo",
    srcs = ["echo.cpp"],
    linkopts = ["-lnbd"],
    deps = [
      "@utls//lib:channel", 
      "//src:pinger",
    ],
    copts = [
      "-std=c++20",
    ],
)

cc_binary(
    name = "ping",
    srcs = ["ping.cpp"],
    linkopts = [ "-ltins" ],
    deps = [
    ],
    copts = [
      "-std=c++20",
    ],
)

cc_binary(
    name = "ping-drive",
    srcs = ["nbd.cpp"],
    linkopts = [ "-ltins", "-lnbd" ],
    deps = [
    ],
    copts = [
      "-std=c++20",
    ],
)

cc_library(
    name = "pinger",
    srcs = [ "Pinger.cpp" ],
    hdrs = [ "Pinger.hpp" ],
    linkopts = ["-lnbd", "-ltins"],
    deps = [ 
      "@utls//lib:channel",
    ],
    visibility = [ "//visibility:public" ],
    copts = [ "-std=c++20", "-Ofast" ],
)
