cc_binary(
    name = "echo",
    srcs = ["echo.cpp"],
    linkopts = ["-lnbd"],
    deps = [
      "@utls//lib:channel", 
      "//src:pinger",
    ],
    copts = [
      "-std=c++20",
    ],
)

cc_binary(
    name = "ping",
    srcs = ["ping.cpp"],
    linkopts = [ "-ltins" ],
    deps = [
    ],
    copts = [
      "-std=c++20",
    ],
)

# cc_binary(
#     name = "ping-drive",
#     srcs = ["nbd.cpp"],
#     linkopts = [ "-ltins", "-lnbd" ],
#     deps = [
#         ":pinger",
#         "@nbdcpp//:nbdcpp",
#     ],
#     copts = [
#       "-std=c++20",
#     ],
# )

cc_binary(
    name = "ping-nbd",
    srcs = ["nbdkit.cpp"],
    linkopts = [ "-ltins", "-lnbd" ],
    deps = [
        ":pinger",
    ],
    copts = [
      "-std=c++20",
      "-fPIC",
      "-shared",
      "-Ofast",
    ],
    visibility = [ "//visibility:public" ],
    linkshared=True,
)

cc_library(
    name = "pinger",
    hdrs = [ "Pinger.hpp" ],
    linkopts = ["-lnbd", "-ltins"],
    deps = [ 
      "@utls//lib:channel",
    ],
    visibility = [ "//visibility:public" ],
    copts = [ "-std=c++20", "-Ofast" ],
)
